# Alkaid

./: .gitignore  .gitmodules  Alkaid.sln  CMakeCache.txt  CMakeLists.txt  CMakeLists1.txt  CPackConfig.cmake  CPackSourceConfig.cmake  LICENSE  README.md  cmake_install.cmake
doc/: Notes.md  [01] Engine Structure.md  designDraft.md  pbribl.md
shaders/basicTriangle/: basicTriangle.frag  basicTriangle.frag.spv
shaders/cubeMap/: cubeMap.frag  cubeMap.frag.spv  cubeMap.vert  cubeMap.vert.spv  skyBox.frag  skyBox.frag.spv
shaders/pbribl/: cubeMap.frag  cubeMap.frag.spv  cubeMap.vert  cubeMap.vert.spv  filter.frag  filter.frag.spv  lut.frag  skyBox.frag.spv  skyBox.vert  skyBox.vert.spv
shaders/pcss/: offscreen.frag  offscreen.frag.spv  screen.frag  screen.frag.spv  screen.vert  screen.vert.spv
shaders/shading/: shading.frag  shading.frag.spv  shading.vert  shading.vert.spv
shaders/shadowMapping/: offscreen.frag  offscreen.vert  offscreen.vert.spv  screen.frag  screen.frag.spv  screen.vert  screen.vert.spv
shaders/ssr/: offscreen.vert  screen.frag  screen.vert
source/base/: CMakeLists.txt  VulkanCamera.h  VulkanCommon.cpp  VulkanCommon.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInit.cpp  VulkanInit.h  VulkanSwapchain.cpp  VulkanSwapchain.h  cmake_install.cmake  vulkanBase.cpp  vulkanBase.h
source/examples/: basicTriangle.cpp
source/examples/basicTriangle/: basicTriangle.cpp
source/examples/pcss/: pcss  pcss.cpp
src/: CMakeLists.txt  main.cpp  triangle.cpp
src/backend/: CMakeLists.txt
src/backend/src/vulkan/: VulkanAsset.cpp  VulkanAsset.h  VulkanBase.cpp  VulkanBase.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCamera.cpp  VulkanCamera.h  VulkanCommand.cpp  VulkanCommand.h  VulkanCommon.h  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanDriver.cpp  VulkanDriver.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanUtils.cpp  VulkanUtils.h
src/examples/basicTriangle/: basicTriangle  basicTriangle.cpp
src/examples/cubeMap/: cubeMap.cpp
src/examples/pbribl/: pbribl.cpp
src/examples/pcss/: pcss  pcss.cpp
src/examples/shading/: shading  shading.cpp
src/examples/shadowMapping/: shadowMapping  shadowMapping.cpp
src/function/: CMakeLists.txt  VulkanBase.cpp  VulkanBase.h
src/function/asset/: VulkanAsset.cpp  VulkanAsset.h
src/function/common/: VulkanCommon.h
src/function/control/: VulkanCamera.cpp  VulkanCamera.h
src/function/initialization/: VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.cpp  VulkanInstance.h
src/function/preparation/: VulkanCommand.cpp  VulkanCommand.h  VulkanSwapChain.cpp  VulkanSwapChain.h
src/function/rendering/: VulkanPipeline.cpp  VulkanPipeline.h
src/function/utils/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanSync.cpp  VulkanSync.h  VulkanUtils.cpp  VulkanUtils.h
src/include/: Application.h  Engine.h  VertexBuffer.h
src/src/: Application.cpp  Application.cppm  Engine.cpp  Engine.cppm  VertexBuffer.cpp  VertexBuffer.cppm
